refactor : 세션 삭제 및 교체, 교체 복구 Lua 수정 및 적용